--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-05-31 11:39:14.802993\n"
+      "2019-04-25 16:36:29.639339\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
     "MAKE_CIGALE_INPUT = True\n",
-    "MAKE_FINAL = True"
+    "MAKE_FINAL = False"
    ]
   },
   {
@@ -250,7 +250,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,27 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_irac_i4_ap', 'flag_irac_i2_ap', 'flag_irac_i3_ap', 'flag_irac_i1_ap'}\n"
+      "{'flag_irac_i3_ap', 'flag_irac_i1_ap', 'flag_irac_i4_ap', 'flag_irac_i2_ap'}\n",
+      "Column f_ap_lbc_u has missing data\n",
+      "Column ferr_ap_lbc_u has missing data\n",
+      "Column m_ap_lbc_u has missing data\n",
+      "Column merr_ap_lbc_u has missing data\n",
+      "Column f_lbc_u has missing data\n",
+      "Column ferr_lbc_u has missing data\n",
+      "Column m_lbc_u has missing data\n",
+      "Column merr_lbc_u has missing data\n",
+      "Column f_ap_lbc_y has missing data\n",
+      "Column ferr_ap_lbc_y has missing data\n",
+      "Column m_ap_lbc_y has missing data\n",
+      "Column merr_ap_lbc_y has missing data\n",
+      "Column f_lbc_y has missing data\n",
+      "Column ferr_lbc_y has missing data\n",
+      "Column m_lbc_y has missing data\n",
+      "Column merr_lbc_y has missing data\n",
+      "Column flag_irac_i1_ap has missing data\n",
+      "Column flag_irac_i2_ap has missing data\n",
+      "Column flag_irac_i3_ap has missing data\n",
+      "Column flag_irac_i4_ap has missing data\n"
      ]
     }
    ],
@@ -455,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -505,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -535,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -550,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -577,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -598,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -627,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
