--- a/dmu26/dmu26_XID+MIPS_AKARI-SEP/XID+MIPS_AKARI-SEP_final_processing.ipynb
+++ b/dmu26/dmu26_XID+MIPS_AKARI-SEP/XID+MIPS_AKARI-SEP_final_processing.ipynb
@@ -38,50 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat1=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat40039570.fits')\n",
-    "cat2=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat40039610.fits')\n",
-    "cat3=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat40049400.fits')\n",
-    "cat4=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60080410.fits')\n",
-    "cat5=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60092780.fits')\n",
-    "cat6=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_0.fits')\n",
-    "cat7=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_1.fits')\n",
-    "cat8=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_2.fits')\n",
-    "cat9=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_3.fits')\n",
-    "cat10=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_4.fits')\n",
-    "cat11=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_5.fits')\n",
-    "cat12=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_6.fits')\n",
-    "cat13=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_8.fits')\n",
-    "cat14=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_9.fits')\n",
-    "cat15=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_10.fits')\n",
-    "cat16=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_11.fits')\n",
-    "cat17=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_12.fits')\n",
-    "cat18=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_13.fits')\n",
-    "cat19=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat60096211_7.fits')\n",
-    "cat20=Table.read('data/output/dmu26_XID+MIPS_AKARI-NEP_cat40019880.fits')"
+    "catalogs = glob.glob(f\"data/output/dmu26_XID+MIPS_AKARI-SEP_cat*\", recursive=True)\n",
+    "cat1=Table.read('data/output/dmu26_XID+MIPS_AKARI-SEP_cat')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalogs=[cat2,cat3,cat4,cat5,cat6,cat7,cat8,cat9,cat10,cat11,cat12,cat13,cat14,cat15,cat16,cat17,cat18, cat19,cat20]\n",
     "for c in catalogs:\n",
-    "    for i,source in enumerate(c['help_id']):\n",
+    "    cat = Table.read(c)\n",
+    "    for i,source in enumerate(cat['help_id']):\n",
     "        if source in cat1['help_id']:\n",
-    "            if c[i]['FErr_MIPS_24_u'] < cat1[i]['FErr_MIPS_24_u']:\n",
+    "            if cat[i]['FErr_MIPS_24_u'] < cat1[i]['FErr_MIPS_24_u']:\n",
     "            #if c[i]['Rhat_MIPS_24'] < cat1[i]['Rhat_MIPS_24']:\n",
     "                cat1[i] = c[i]\n",
     "            else:\n",
     "                continue\n",
     "        else:\n",
-    "            cat1.add_row(c[i])\n",
-    "        \n"
+    "            cat1.add_row(cat[i])"
    ]
   },
   {
@@ -90,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NEP_cat=cat1"
+    "SEP_cat=cat1"
    ]
   },
   {
@@ -127,10 +108,10 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "skew=(NEP_cat['FErr_MIPS_24_u']-NEP_cat['F_MIPS_24'])/(NEP_cat['F_MIPS_24']-NEP_cat['FErr_MIPS_24_l'])\n",
+    "skew=(SEP_cat['FErr_MIPS_24_u']-SEP_cat['F_MIPS_24'])/(SEP_cat['F_MIPS_24']-SEP_cat['FErr_MIPS_24_l'])\n",
     "skew.name='(84th-50th)/(50th-16th) percentile'\n",
     "use = skew < 5\n",
-    "g=sns.jointplot(x=np.log10(NEP_cat['F_MIPS_24'][use]),y=skew[use], kind='hex')\n",
+    "g=sns.jointplot(x=np.log10(SEP_cat['F_MIPS_24'][use]),y=skew[use], kind='hex')\n",
     "print(np.max(skew[use]))\n"
    ]
   },
@@ -157,7 +138,7 @@
    "outputs": [],
    "source": [
     "from astropy.table import Column\n",
-    "NEP_cat.add_column(Column(np.zeros(len(NEP_cat), dtype=bool),name='flag_mips_24'))\n"
+    "NEP_cat.add_column(Column(np.zeros(len(SEP_cat), dtype=bool),name='flag_mips_24'))\n"
    ]
   },
   {
@@ -177,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "ind_NEP=(NEP_cat['Pval_res_24']>0.5) | (NEP_cat['F_MIPS_24'] < 30.0)"
+    "ind_SEP=(SEP_cat['Pval_res_24']>0.5) | (SEP_cat['F_MIPS_24'] < 30.0)"
    ]
   },
   {
@@ -188,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "NEP_cat['flag_mips_24'][ind_NEP]=True\n"
+    "SEP_cat['flag_mips_24'][ind_SEP]=True\n"
    ]
   },
   {
@@ -206,7 +187,7 @@
     }
    ],
    "source": [
-    "NEP_cat.write('./data/output/dmu26_XID+MIPS_AKARI-NEP_cat_20190227.fits', format='fits',overwrite=True)"
+    "SEP_cat.write('./data/output/dmu26_XID+MIPS_AKARI-SEP_cat_20190.fits', format='fits',overwrite=True)"
    ]
   },
   {
@@ -241,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MIPS_pval=fits.open('./data/output/Pval/dmu26_XID+MIPS_AKARI-NEP_Bayes_Pval1.fits')\n"
+    "MIPS_pval=fits.open('./data/output/Pval/dmu26_XID+MIPS_AKARI-SEP_Bayes_Pval1.fits')\n"
    ]
   },
   {
