AKARI-NEP rerun

--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-06-18 17:39:14.091221\n"
+      "2019-05-21 16:11:45.551798\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
     "    name=\"ferr_pacs_green\"\n",
     "))\n",
     "xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
-    "xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
+    "#xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
     "\n",
     "xid_pacs.add_column(Column(\n",
     "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
@@ -154,7 +154,7 @@
     "    name=\"ferr_pacs_red\"\n",
     "))\n",
     "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
-    "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
+    "#xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
     "\n",
     "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
     "                    #'flag_pacs_green', # No flags in PACS yet\n",
@@ -241,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -630,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
